--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+
 .App {
+  height:100%;
   text-align: center;
 }
-
+#cesiumContainer{
+  height: 100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
