--- a/packages/tools-ui/src/App.css
+++ b/packages/tools-ui/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+/* 滚动条样式*/
+::-webkit-scrollbar {
+  width: 6px;
+  height: 10px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(161, 163, 169, 0.3);
+  border-radius: 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
