--- a/packages/tools-ui/src/view/side-tabs/index.scss
+++ b/packages/tools-ui/src/view/side-tabs/index.scss
@@ -1,9 +1,9 @@
 .tabs-side {
-  width: 500px;
-
+  position: relative;
+  width: 100%;
+  height: 100%;
   .ant-tabs-nav-list {
     width: 100%;
-
     .ant-tabs-tab {
       flex: 1;
       justify-content: center;
@@ -20,5 +20,12 @@
         height: 100%;
       }
     }
+  }
+
+  .ant-tabs-nav-operations {
+    display: none !important;
+  }
+  .ant-tabs-ink-bar-animated {
+    transition: width 0.1s, left 0.1s, right 0.1s !important;
   }
 }
